# ames_project

./: Untitled.ipynb  pyproject.toml
docs/: notes.md
