[tool.poetry]
name = "ames"
version = "0.1.0"
description = ""
authors = ["TheoBR00 <38351029+TheoBR00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
